# javascript/src/openapi/types/ObjectParamAPI.ts
@@ -83,19 +83,19 @@ export interface AddressesApiV1AddressesListRequest {
 
 export interface AddressesApiV1AddressesValidateRequest {
     /**
-     * Chain ID
-     * Defaults to: undefined
-     * @type string
-     * @memberof AddressesApiv1AddressesValidate
-     */
-    chainId: string
-    /**
      * Addresses
      * Defaults to: undefined
      * @type Array&lt;string&gt;
      * @memberof AddressesApiv1AddressesValidate
      */
     addresses: Array<string>
+    /**
+     * Chain ID
+     * Defaults to: undefined
+     * @type string
+     * @memberof AddressesApiv1AddressesValidate
+     */
+    chainId: string
 }
 
 export interface AddressesApiV1WalletsCreateAddressRequest {
@@ -193,7 +193,7 @@ export class ObjectAddressesApi {
      * @param param the request object
      */
     public v1AddressesValidateWithHttpInfo(param: AddressesApiV1AddressesValidateRequest, options?: Configuration): Promise<HttpInfo<ValidateAddressesReply>> {
-        return this.api.v1AddressesValidateWithHttpInfo(param.chainId, param.addresses,  options).toPromise();
+        return this.api.v1AddressesValidateWithHttpInfo(param.addresses, param.chainId,  options).toPromise();
     }
 
     /**
@@ -202,7 +202,7 @@ export class ObjectAddressesApi {
      * @param param the request object
      */
     public v1AddressesValidate(param: AddressesApiV1AddressesValidateRequest, options?: Configuration): Promise<ValidateAddressesReply> {
-        return this.api.v1AddressesValidate(param.chainId, param.addresses,  options).toPromise();
+        return this.api.v1AddressesValidate(param.addresses, param.chainId,  options).toPromise();
     }
 
     /**
